src/themes/OLH/assets/scss/app.scss
/* ... */
#content {
  .columns {
    padding-top: rem-calc(20px);
    padding-bottom: rem-calc(20px);
  }
  .side-info {
    h2 {
      text-transform: uppercase;
      font-size: rem-calc(18px);
      color: var(--primary-dark-color);
    }
    .sticky {
      width: 100%;
    }
    .sticky.is-stuck {
      overflow: auto;
      max-height: 100%;
    }

    .section {
      border-bottom: 1px solid $light-gray;
      padding: rem-calc(40px) rem-calc(40px);
    }
    ul {
      list-style-type: none;
      margin: 0;

      li {
        position: relative;
        margin-bottom: 10px;
        line-height: 1.3em;

        &:before {
          content: '';
          position: absolute;
          top: 50%;
          left: -56px;
          width: 30px;
          height: 2px;
          background: $light-gray;
        }
      }
    }
  }
}

.summary {
  text-align: center;
  @extend .white-text;
  margin-bottom: rem-calc(40px);

  .columns {
    border-right: 1px solid rgba(255, 255, 255, 0.1);
  }

  p {
    font-family: $header-font-family;
    font-size: rem-calc(36px);
    font-weight: 300;
    font-style: normal;
    margin-top: 0;
    margin-bottom: 0.5rem;
    line-height: 1.4;

    span {
      display: block;
      @extend .uppercase;
      font-size: rem-calc(14px);
    }
  }

  .bottom p {
    @extend .uppercase;
    font-size: rem-calc(14px);
  }

  .top {
    background: var(--primary-dark-color);
  }

  .bottom {
    background: var(--primary-light-color);
  }
}

footer {
  .logo-wrapper {
    padding-top: rem-calc(20px);
    padding-bottom: rem-calc(20px);
    height: $footer-height;
  }
  p, li {
    font-family: $header-font-family;
    font-size: rem-calc(12px);
    color: #333;
    margin: 0;
  }
  .columns:not(.logo-wrapper) {
    margin-top: rem-calc(12px);
    margin-bottom: rem-calc(12px);
  }
  #presswide_footer_text {
    margin-top: 0;
  }
  svg,
  img {
    max-height: 60px;
    max-width: 180px;
  }
  svg {
    path {
      fill: $white;
    }
  }
  ul {
    margin: 0;

    li a {
      @extend .uppercase;
      font-weight: bold;
      font-family: $header-font-family;
      font-size: rem-calc(12px);
      color: #333;
    }
  }
}

.author-info {
  font-size: rem-calc(12px);
  max-width: 50%;
  z-index: 1000;
}

ul .inline {
  display: inline;
}

table tr th {
  text-align: left;
}

table tr.active td {
  background-color: var(--primary-dark-color);
  color: var(--primary-light-color);
}

.orbit {
    position: relative;
    z-index: -10;
}

.small-dropdown {
    width: initial;
    min-width: 150px;
}

.pub-button {
    min-width: 150px;
}

.ui-sortable-handle {
  cursor: move;
}

.bs-callout {
    padding: 20px;
    margin: 20px 0;
    border: 1px solid #eee;
    border-left-width: 5px;
    border-radius: 3px;
}
.bs-callout h4 {
    margin-top: 0;
    margin-bottom: 5px;
}
.bs-callout p:last-child {
    margin-bottom: 0;
}
.bs-callout code {
    border-radius: 3px;
}
.bs-callout+.bs-callout {
    margin-top: -5px;
}
.bs-callout-default {
    border-left-color: #777;
}
.bs-callout-default h4 {
    color: #777;
}
.bs-callout-primary {
    border-left-color: #428bca;
}
.bs-callout-primary h4 {
    color: #428bca;
}
.bs-callout-success {
    border-left-color: #5cb85c;
}
.bs-callout-success h4 {
    color: #5cb85c;
}
.bs-callout-danger {
    border-left-color: #d9534f;
}
.bs-callout-danger h4 {
    color: #d9534f;
}
.bs-callout-warning {
    border-left-color: #f0ad4e;
}
.bs-callout-warning h4 {
    color: #f0ad4e;
}
.bs-callout-info {
    border-left-color: #5bc0de;
}
.bs-callout-info h4 {
    color: #5bc0de;
}
.equilibrium {
  float: left !important;
  height: 330px !important;
}

.list-group {
  margin-bottom: 20px;
  padding-left: 0;
  margin-left: 0 !important;
}
.list-group-item {
  position: relative;
  display: block;
  padding: 10px 15px;
  margin-bottom: -1px;
  background-color: #ffffff;
  border: 1px solid #dddddd;
}
.list-group-item:first-child {
  border-top-right-radius: 4px;
  border-top-left-radius: 4px;
}
.list-group-item:last-child {
  margin-bottom: 0;
  border-bottom-right-radius: 4px;
  border-bottom-left-radius: 4px;
}
a.list-group-item,
button.list-group-item {
  color: #555555;
}
a.list-group-item .list-group-item-heading,
button.list-group-item .list-group-item-heading {
  color: #333333;
}
a.list-group-item:hover,
button.list-group-item:hover,
a.list-group-item:focus,
button.list-group-item:focus {
  text-decoration: none;
  color: #555555;
  background-color: #f5f5f5;
}
button.list-group-item {
  width: 100%;
  text-align: left;
}
.list-group-item.disabled,
.list-group-item.disabled:hover,
.list-group-item.disabled:focus {
  background-color: #eeeeee;
  color: #777777;
  cursor: not-allowed;
}
.list-group-item.disabled .list-group-item-heading,
.list-group-item.disabled:hover .list-group-item-heading,
.list-group-item.disabled:focus .list-group-item-heading {
  color: inherit;
}
.list-group-item.disabled .list-group-item-text,
.list-group-item.disabled:hover .list-group-item-text,
.list-group-item.disabled:focus .list-group-item-text {
  color: #777777;
}
.list-group-item.active,
.list-group-item.active:hover,
.list-group-item.active:focus {
  z-index: 2;
  color: #ffffff;
  background-color: #337ab7;
  border-color: #337ab7;
}
.list-group-item.active .list-group-item-heading,
.list-group-item.active:hover .list-group-item-heading,
.list-group-item.active:focus .list-group-item-heading,
.list-group-item.active .list-group-item-heading > small,
.list-group-item.active:hover .list-group-item-heading > small,
.list-group-item.active:focus .list-group-item-heading > small,
.list-group-item.active .list-group-item-heading > .small,
.list-group-item.active:hover .list-group-item-heading > .small,
.list-group-item.active:focus .list-group-item-heading > .small {
  color: inherit;
}
/* ... */

